Fix icon button right align class

--- a/src/renderer/components/ft-icon-button/ft-icon-button.sass
+++ b/src/renderer/components/ft-icon-button/ft-icon-button.sass
@@ -62,7 +62,7 @@
     right: calc(50% - 20px)
 
   &.right
-    right: calc(50% + 20px)
+    left: calc(50% - 20px)
 
   .list
     margin: 0
